Fix alignments

--- a/css/style.css
+++ b/css/style.css
@@ -7518,6 +7518,7 @@ ul {
 }
 
 .align-center {
+  clear: both;
   text-align: center;
 }
 .align-center img {
